--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>io.kubernetes</groupId>
             <artifactId>client-java</artifactId>
-            <version>2.0.0-beta1</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
         </dependency>
 
